# RepoCoderStudioV1

./: README.md  pyproject.toml
RepoCoderStudio/: README.md
RepoCoderStudio/configs/: stage1.yaml  stage2.yaml  stage3.yaml  stage4.yaml  stage5.yaml  stage6.yaml
RepoCoderStudio/docs/: 00_overview.md  01_compute_platforms.md  02_model_comparison.md  03_environments.md  04_challenges.md
RepoCoderStudio/docs/stages/: stage1_documentation.md  stage2_nl2python.md  stage3_py2java.md  stage4_repo_awareness.md  stage5_rag.md  stage6_agentic.md
RepoCoderStudio/notebooks/: stage1_documentation.ipynb
RepoCoderStudio/requirements/: base.txt  stage1.txt  stage2.txt  stage3.txt  stage4.txt  stage5.txt  stage6.txt
RepoCoderStudio/scripts/: run_stage.py
RepoCoderStudio/src/repocoder/: __init__.py
RepoCoderStudio/src/repocoder.egg-info/: PKG-INFO  SOURCES.txt
RepoCoderStudio/src/repocoder/common/: __init__.py  config.py  env.py  generation.py  io_utils.py  model_loader.py
RepoCoderStudio/src/repocoder/common/metrics/: __init__.py  ast_similarity.py  codebleu.py  (+6 more)
RepoCoderStudio/src/repocoder/stage1_documentation/: __init__.py  data.py  evaluate.py  run.py
RepoCoderStudio/src/repocoder/stage2_nl2python/: __init__.py  run.py
RepoCoderStudio/src/repocoder/stage3_py2java/: __init__.py  run.py
RepoCoderStudio/src/repocoder/stage4_repo_awareness/: __init__.py  run.py
RepoCoderStudio/src/repocoder/stage5_rag/: __init__.py  run.py
RepoCoderStudio/src/repocoder/stage6_agentic/: __init__.py  run.py
RepoCoderStudio/tests/: conftest.py  test_common.py  test_stage1.py
