[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repocoder"
version = "0.1.0"
description = "RepoCoder Studio — a phased, repository-aware AI coding assistant"
readme = "README.md"
requires-python = ">=3.9"
# Runtime dependencies are intentionally NOT pinned here — they are installed per stage
# from requirements/base.txt + requirements/stageN.txt so Colab installs only what a stage
# needs. This file just makes `import repocoder` work via `pip install -e .`.
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repocoder = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
